--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.18.1",
-    "lts": "^1.2.0"
+    "lts": "^1.2.0",
+    "marked": "^4.1.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "jest": "^29.0.2",
+    "nodemon": "^2.0.19",
+    "supertest": "^6.2.4"
   },
   "scripts": {
     "start": "nodemon src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
